--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -1,20 +1,34 @@
-// @font-face {
-//     font-family: 'Nunito Sans'; // You can give any name to your font
-//     src: url('../../assets/fonts/static/NunitoSans_10pt-Regular.ttf') format('truetype');
-//     font-weight: normal;
-//     font-style: normal;
-// }
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Nunito Sans'; // You can give any name to your font
-//     src: url('../../assets/fonts/static/NunitoSans_10pt-Bold.ttf') format('truetype');
-//     font-weight: bold;
-//     font-style: normal;
-// }
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Nunito Sans'; // You can give any name to your font
-//     src: url('../../assets/fonts/static/NunitoSans_10pt-Light.ttf') format('truetype');
-//     font-weight: lighter;
-//     font-style: normal;
-// }
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../../assets/fonts/Montserrat/static/Montserrat-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../../assets/fonts/Montserrat/static/Montserrat-ExtraBold.ttf') format('truetype');
+	font-weight: 800;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../../assets/fonts/Montserrat/static/Montserrat-ExtraBoldItalic.ttf') format('truetype');
+	font-weight: 800;
+	font-style: italic;
+}
