--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -34,106 +34,65 @@
 
 
 // FONTS
-// @mixin font-reg {
-//     font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-//     font-weight: normal;
-// }
-
-// @mixin font-bold {
-//     font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-//     font-weight: bold;
-// }
-
-// @mixin font-light {
-//     font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-//     font-weight: lighter;
-// }
-
-
-// Typography
-
-
-@mixin font-reg {
-	// font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-	font-weight: normal;
-}
-
-@mixin font-bold {
-	// font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-	font-weight: bold;
-}
-
-@mixin font-light {
-	// font-family: 'Nunito Sans', 'Helvetica Neue', Arial, sans-serif;
-	font-weight: lighter;
+@mixin montserrat-font($weight: 400, $style: normal) {
+	font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: $weight;
+	font-style: $style;
 }
 
 
 @mixin body-tablet__desk {
 	font-size: 14px;
 	line-height: 22px;
-	@include font-reg();
+	@include montserrat-font;
 }
 
 @mixin h1-tablet__desk {
 	font-size: 33px;
-	@include font-bold();
+	@include montserrat-font(800, italic);
 }
 
 @mixin h2-tablet__desk {
 	font-size: 24px;
-	@include font-bold();
+	@include montserrat-font(700, normal);
 }
 
 @mixin h3-tablet__desk {
 	font-size: 16px;
-	@include font-bold();
+	@include montserrat-font(700, normal);
 }
 
 @mixin p-tablet__desk {
 	font-size: 14px;
-	@include font-reg();
-}
-
-@mixin labels-buttons-tablet_desk {
-	text-transform: uppercase;
-	font-size: 12px;
-	@include font-bold();
+	@include montserrat-font;
 }
 
 
 // Text Styling -- MOBILE
 @mixin body-mobile {
 	font-size: 13px;
-	@include font-reg();
+	@include montserrat-font;
 }
 
 @mixin h1-mobile {
 	font-size: 24px;
-	@include font-bold();
+	@include montserrat-font(800, italic);
 }
 
 @mixin h2-mobile {
 	font-size: 16px;
-	@include font-bold();
+	@include montserrat-font(700, normal);
 }
 
 @mixin h3-mobile {
 	font-size: 16px;
-	@include font-bold();
+	@include montserrat-font(700, normal);
 }
 
 @mixin p-mobile {
 	font-size: 13px;
-	@include font-reg();
+	@include montserrat-font;
 }
-
-@mixin labels-buttons-mobile {
-	text-transform: uppercase;
-	font-size: 13px;
-	@include font-bold();
-}
-
 
 
 
@@ -143,13 +102,14 @@
 	border-radius: 6px;
 	cursor: pointer;
 	font-size: 16px;
-	font-weight: bold;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 200px;
 	height: 40px;
 	transition: color 0.2s ease-in-out, border 0.2s ease-in-out;
+	@include montserrat-font(300, normal);
+
 
 	&:hover {
 		border: 1px solid lightslategray;
