italicize email signup header

--- a/src/components/SignUpForm/SignUpForm.scss
+++ b/src/components/SignUpForm/SignUpForm.scss
@@ -142,11 +142,9 @@ iframe html {
 	overflow: hidden;
 }
 
-
-
-.main,
-.main .container-center .layout-wide-center {
-	background-color: blue !important;
+iframe html .newsletter-header {
+	@include montserrat-font;
+	font-size: 40px;
 }
 
 .container-center,
