--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,8 +11,9 @@
 	}
 
 	@include desktop-header {
-		// min-height: 100vh;
+		max-height: 114.71px;
 	}
+
 
 	@include desktop {
 		// min-height: 100vh;
